@@ -1,3 +1,7 @@
+2010-08-10:
+	* (mhatle) add execl, execle, execlp, execv, and execvp wrappers
+	* (seebs) handle ... for execl, etc.
+
 2010-08-06:
 	* (mhatle) Fix an exec program with an empty environment
 
